--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
-<html>
-<body>
-Clyde James Felix
-</body>
+<!DOCTYPE html>
+
+<html lang = "en">
+  <head>
+  	<title>Clyde James Felix </title>
+  	<center><h1>Clyde James Felix</h1></center>
+  </head>
+
+  <body>
+  	<!-- Picture-->
+
+  	<center><img src="Meow.jpg" alt="Portrait" style="width:200px;height:200px;"></center>
+
+    <p>
+    I am pursuing a Bachelor's of Science degree in Electrical Engineering 		at the University of Hawai'i at Manoa.
+  	</p>
+  	<p>
+    Interest: Signal & Image processing, Computer Vision, Data Science, 		Machine learning, Neural networks.
+  	</p>
+
+  <!-- Links -->
+
+  </body>
 </html>
