--- a/index.html
+++ b/index.html
@@ -3,21 +3,37 @@
 <html lang = "en">
   <head>
   	<title>Clyde James Felix </title>
-  	<center><h1>Clyde James Felix</h1></center>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
   </head>
 
   <body>
   	<!-- Picture-->
+    <div class="main">
 
-  	<center><img src="Meow.jpg" alt="Portrait" style="width:200px;height:200px;"></center>
-
-    <p>
-    I am pursuing a Bachelor's of Science degree in Electrical Engineering 		at the University of Hawai'i at Manoa.
-  	</p>
-  	<p>
-    Interest: Signal & Image processing, Computer Vision, Data Science, 		Machine learning, Neural networks.
-  	</p>
-
+  	 <img src="DSC02272.jpg" alt="Portrait" style="width:200px;height:250px;">
+     <div class="text">
+       <h1 id="name">Clyde James Felix</h1>
+     <div class="textbody">
+       email: felixclyde@gmail.com
+       <p>
+         Hello! I am pursuing a Bachelor's of Science degree in Electrical Engineering at the University of Hawai'i at Manoa.
+    	 </p>
+    	 <p>
+         Interest: Signal & Image processing, Computer Vision, Data Science, Machine learning, Neural networks.
+    	 </p>
+    </div>
+    </div>
+    <!-- Nav -->
+    <nav id="nav">
+      <a href="https://github.com/cjfelixx" class="icon solid fa-folder"><span>Github</span></a>
+      <a href="Curriculum_Vitae.pdf" class="icon solid fa-folder"><span>Resume</span></a>
+      <a href="https://www.linkedin.com/in/felixclyde/" class="icon brands fa-linkedin"><span>Linkedin</span></a>
+      <a href="#gallery" class" "><span>Gallery</span></a>
+      <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
+    </nav>
+   </div>
   <!-- Links -->
 
   </body>
