--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   <body>
   	<!-- Picture-->
     <div class="main">
-
+      <!-- Nav -->
+      <nav id="nav">
+        <a href="index.html" class="Home"><span>Home</span></a>
+        <a href="https://github.com/cjfelixx" class="icon solid fa-folder"><span>Github</span></a>
+        <a href="CVv2.0.pdf" class="icon solid fa-folder"><span>Resume</span></a>
+        <a href="https://www.linkedin.com/in/felixclyde/" class="icon brands fa-linkedin"><span>Linkedin</span></a>
+        <a href="Gallery.html" class" Gallery"><span>Gallery</span></a>
+        <!---  <a href="#contact" class="Contact"><span>Contact</span></a> --->
+      </nav>
   	 <img src="DSC02272.jpg" alt="Portrait" style="width:200px;height:250px;">
      <div class="text">
        <h1 id="name">Clyde James Felix</h1>
@@ -25,14 +33,7 @@
     	 </p>
     </div>
     </div>
-    <!-- Nav -->
-    <nav id="nav">
-      <a href="https://github.com/cjfelixx" class="icon solid fa-folder"><span>Github</span></a>
-      <a href="Curriculum_Vitae.pdf" class="icon solid fa-folder"><span>Resume</span></a>
-      <a href="https://www.linkedin.com/in/felixclyde/" class="icon brands fa-linkedin"><span>Linkedin</span></a>
-      <a href="#gallery" class" "><span>Gallery</span></a>
-      <a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-    </nav>
+
    </div>
   <!-- Links -->
 
