--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://github.com/cjfelixx" class="icon solid fa-folder"><span>Github</span></a>
         <a href="CVv2.0.pdf" class="icon solid fa-folder"><span>Resume</span></a>
         <a href="https://www.linkedin.com/in/felixclyde/" class="icon brands fa-linkedin"><span>Linkedin</span></a>
-        <a href="Gallery.html" class" Gallery"><span>Gallery</span></a>
+        <a href="https://vsco.co/cjfelixx/images" class" Gallery"><span>Gallery</span></a>
         <!---  <a href="#contact" class="Contact"><span>Contact</span></a> --->
       </nav>
   	 <img src="DSC02272.jpg" alt="Portrait" style="width:200px;height:250px;">
