--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav id="nav">
         <a href="index.html" class="Home"><span>Home</span></a>
         <a href="https://github.com/cjfelixx" class="icon solid fa-folder"><span>Github</span></a>
-        <a href="CVv2.0.pdf" class="icon solid fa-folder"><span>Resume</span></a>
+        <a href="CV.pdf" class="icon solid fa-folder"><span>Resume</span></a>
         <a href="https://www.linkedin.com/in/felixclyde/" class="icon brands fa-linkedin"><span>Linkedin</span></a>
         <a href="https://vsco.co/cjfelixx/images" class" Gallery"><span>Gallery</span></a>
         <!---  <a href="#contact" class="Contact"><span>Contact</span></a> --->
@@ -26,7 +26,7 @@
      <div class="textbody">
        email: felixclyde@gmail.com
        <p>
-         Hello! I am pursuing a Bachelor's of Science degree in Electrical Engineering at the University of Hawai'i at Manoa.
+         Hello! I am pursuing a Bachelor's of Science degree in Electrical Engineering at the University of Hawai'i at Mānoa.
     	 </p>
     	 <p>
          Interest: Signal & Image processing, Computer Vision, Data Science, Machine learning, Neural networks.
