--- a/index.html
+++ b/index.html
@@ -2,40 +2,35 @@
 
 <html lang = "en">
   <head>
-  	<title>Clyde James Felix </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
+    <title>Clyde James Felix </title>
+    <meta charset="utf-8">
+    <meta name='description' content>
+    <meta name='author' content>
+    <meta name="viewport" content>
+    <link rel="stylesheet" href="style/index.css" type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>$(function(){$("#navigation").load("nav.html");});</script>
   </head>
 
   <body>
-  	<!-- Picture-->
+    <div id="navigation"></div>
     <div class="main">
-      <!-- Nav -->
-      <nav id="nav">
-        <a href="index.html" class="Home"><span>Home</span></a>
-        <a href="https://github.com/cjfelixx" class="icon solid fa-folder"><span>Github</span></a>
-        <a href="CV.pdf" class="icon solid fa-folder"><span>Resume</span></a>
-        <a href="https://www.linkedin.com/in/felixclyde/" class="icon brands fa-linkedin"><span>Linkedin</span></a>
-        <a href="https://vsco.co/cjfelixx/images" class" Gallery"><span>Gallery</span></a>
-        <!---  <a href="#contact" class="Contact"><span>Contact</span></a> --->
-      </nav>
-  	 <img src="DSC02272.jpg" alt="Portrait" style="width:200px;height:250px;">
-     <div class="text">
-       <h1 id="name">Clyde James Felix</h1>
-     <div class="textbody">
-       email: felixclyde@gmail.com
-       <p>
-         Hello! I am pursuing a Bachelor's of Science degree in Electrical Engineering at the University of Hawai'i at Mānoa.
-    	 </p>
-    	 <p>
-         Interest: Signal & Image processing, Computer Vision, Data Science, Machine learning, Neural networks.
-    	 </p>
+  	<!-- Picture-->      
+      <div class="Col_1">
+        <img src="images/DSC02272.jpg" alt="Portrait" style="width:200px;height:250px;">
+      </div>
+      <div class="Col_2">
+        <div id="name">Clyde James Felix</div>
+        <div class="textbody">
+          <p class="Bio">
+            I am pursuing a Master of Science degree in Electrical Engineering at the University of Hawai'i at Mānoa.
+            <br>
+            <br>
+            I am interested in Signal & Image processing, Computer Vision, Data Science, Machine learning, Neural networks.
+          </p>
+        </div>
+      </div>
     </div>
-    </div>
-
-   </div>
   <!-- Links -->
-
-  </body>
+</body>
 </html>
