--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <body>
         <div id="navigation"></div>
         <div class="main">
-            In Construction:)
+            <p class="text">In Construction:)</p>
         </div>
 </body>
 </html>
