removed nav item

--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
     <a href="index.html" class="icon solid fa-folder"><span>Home</span></a>
     <a href="docs/CLYDEFELIX_RESUME.pdf" class="icon solid fa-folder"><span>Resume</span></a>
     <a href="docs/CLYDEFELIX_CV.pdf" class="icon solid fa-folder"><span>CV</span></a>
-    <a href="projects.html" class="icon solid fa-folder"><span>Projects</span></a>
+    <!-- <a href="projects.html" class="icon solid fa-folder"><span>Projects</span></a> -->
     <a href="https://github.com/cjfelixx" class="icon solid fa-folder"><span>Github</span></a>
     <a href="https://www.linkedin.com/in/felixclyde/" class="icon brands fa-linkedin"><span>Linkedin</span></a>
     <a href="https://vsco.co/cjfelixx/images" class="Gallery"><span>Gallery</span></a>
