updated docs and bio

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <div id="navigation"></div>
-    <div class="main">      
+    <div class="main">
       <div class="Col_1">
         <img src="images/DSC02272.jpg" alt="Portrait" style="width:200px;height:250px;">
       </div>
@@ -22,10 +22,11 @@
         <div id="name">Clyde James Felix</div>
         <div class="textbody">
           <p class="Bio">
-            I am pursuing a Master of Science degree in Electrical Engineering at the University of Hawai'i at Mānoa.
-            <br>
-            <br>
-            I am interested in Signal & Image processing, Computer Vision, Data Science, Machine learning, Neural networks.
+            I am pursuing a Master of Science degree in Electrical Engineering at the University of Hawai'i at Mānoa.<br><br>
+            
+            My field of interests are in Data Science, Signal & Image processing, Computer Vision, Machine learning, Scientific Computing, and Optimization.<br><br>
+
+            Email: cjfelix@hawaii.edu
           </p>
         </div>
       </div>
