--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <nav class="nav">
     <a href="index.html" class="icon solid fa-folder"><span>Home</span></a>
-    <a href="cjfelixx.github.io/docs/ClydeFelix_Resume.pdf" class="icon solid fa-folder"><span>Resume</span></a>
-    <a href="cjfelixx.github.io/docs/ClydeFelix_CV.pdf" class="icon solid fa-folder"><span>CV</span></a>
+    <a href="docs/ClydeFelix_Resume.pdf" class="icon solid fa-folder"><span>Resume</span></a>
+    <a href="docs/ClydeFelix_CV.pdf" class="icon solid fa-folder"><span>CV</span></a>
     <!-- <a href="projects.html" class="icon solid fa-folder"><span>Projects</span></a> -->
     <a href="https://github.com/cjfelixx" class="icon solid fa-folder"><span>Github</span></a>
     <a href="https://www.linkedin.com/in/felixclyde/" class="icon brands fa-linkedin"><span>Linkedin</span></a>
