fix linking issues

--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
     <meta name='author' content>
     <meta name="viewport" content>
     <link rel="stylesheet" href="style/index.css" type='text/css'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>$(function(){$("#navigation").load("nav.html");});</script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>$(function(){$("#navigation").load("nav.html");});</script> -->
+ 
   </head>
 
   <body>
-    <div id="navigation"></div>
+    <div id="navigation">
+      <a href="index.html" class="icon solid fa-folder"><span>Home</span></a>
+      <a href="docs/ClydeFelix_Resume.pdf" class="icon solid fa-folder"><span>Resume</span></a>
+      <a href="docs/ClydeFelix_CV.pdf" class="icon solid fa-folder"><span>CV</span></a>
+      <!-- <a href="projects.html" class="icon solid fa-folder"><span>Projects</span></a> -->
+      <a href="https://github.com/cjfelixx" class="icon solid fa-folder"><span>Github</span></a>
+      <a href="https://www.linkedin.com/in/felixclyde/" class="icon brands fa-linkedin"><span>Linkedin</span></a>
+      <a href="https://vsco.co/cjfelixx/images" class="Gallery"><span>Gallery</span></a>
+    </div>
     <div class="main">
       <div class="Col_1">
         <img src="images/DSC02272.jpg" alt="Portrait" style="width:200px;height:250px;">
